[package]
name = "rfc-34-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-core = "*"
parity-scale-codec = "*"
staging-xcm = "*"
staging-xcm-builder = "*"
staging-xcm-executor = "*"
frame-support = "*"